# pecha-form

./: .gitignore  LICENSE  README.md  dev.sh  orca.yaml  padmakara-pt-template.docx  prepare_tib.py  prepare_trans.py  requirements.txt  run_web.sh  template.docx  template_tablet.docx  texts_bo_conf.yaml  texts_trans_conf.yaml  ui.py  usage.py
backend/: migrate_normalize_spaces.py  pyproject.toml  query_db.py
backend/app/: auth.py  cherrytree_importer.py  corrected_layer.py  db.py  derivation.py  id_reconcile.py  inherit.py  mailer.py  main.py  main_text_align.py  manifest.py  schemas.py  suggestion_applier.py  syllable_anchors.py  token_align.py  tokenizer.py
backend/app/exporters/: json_exporter.py  manifest_exporter.py
backend/app/routers/: auth.py  derivation.py  display_breaks.py  documents.py  markers.py  notes.py  orgs.py  passages.py  phonetics.py  reading_positions.py  spans.py  styles.py  suggestions.py  tags.py  text_groups.py  texts.py  translations.py  tree_nodes.py
backend/scripts/: import_legacy_translations.py  migrate_inherited_annotations.py  recut_legacy_translations.py  remint_unique_instances.py
backend/tests/: conftest.py  test_attribution.py  test_bake_snapping.py  test_derivation.py  test_documents.py  test_exporters.py  test_id_migrations.py  test_live_inheritance.py  test_offset_drop.py  test_phonetics.py  test_preservation.py  test_restructure.py  test_shared_tags.py  test_source_endpoint.py  test_suggestion_applier.py  test_text_groups.py  test_text_meta.py  test_token_align.py  test_tokenizer.py  test_tree_builder.py
webapp/: app.py  (+1 more)
(+110 files in other folders)
